--- a/styles/room.css
+++ b/styles/room.css
@@ -174,9 +174,10 @@
 #stream__box {
 	background-color: #3f434a;
 	height: 60vh;
+	display: none;
 }
 
-#stream__container {
+#streams__container {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 2em;
@@ -196,6 +197,15 @@
 	overflow: hidden;
 	height: 300px;
 	width: 300px;
+}
+
+.video-player {
+	height: 100%;
+	width: 100%;
+}
+
+.video-player video {
+	border-radius: 50%;
 }
 
 @media (max-width: 1400px) {
